--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.2.1",
+    "d3-cloud": "^1.2.5",
     "facebook-sdk": "^0.3.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -17,6 +18,8 @@
     "react-icons": "^4.8.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
+    "react-tag-cloud": "^1.3.3",
+    "react-wordcloud": "^1.2.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
