--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@uiball/loaders": "^1.2.6",
     "chart.js": "^4.2.1",
     "facebook-sdk": "^0.3.3",
     "react": "^18.2.0",
