--- a/package.json
+++ b/package.json
@@ -3,14 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@nivo/line": "^0.80.0",
+    "@supabase/supabase-js": "^2.14.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@uiball/loaders": "^1.2.6",
-    "chart.js": "^4.2.1",
-    "facebook-sdk": "^0.3.3",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
@@ -20,7 +17,6 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-wordcloud": "^1.2.7",
-    "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
