--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@uiball/loaders": "^1.2.6",
     "firebase": "^9.19.1",
+    "html2pdf.js": "^0.10.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.4.2",
